// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component Match snapshot: Modal 1`] = `
<Modal
  modalVisibility={true}
  toggleVisibilityModal={[MockFunction]}
  withModalTemplate={true}
>
  <Portal
    containerInfo={
      <div>
        <div
          class="modal"
        >
          <article
            class="modal__popup"
            style="width: 47rem; height: 31.25rem;"
          >
            <div>
              Yolo
            </div>
          </article>
        </div>
      </div>
    }
  >
    <ModalContent
      modalVisibility={true}
      toggleVisibilityModal={[MockFunction]}
      withModalTemplate={true}
    >
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={true}
        mountOnEnter={true}
        nodeRef={
          Object {
            "current": <article
              class="modal__popup"
              style="width: 47rem; height: 31.25rem;"
            >
              <div>
                Yolo
              </div>
            </article>,
          }
        }
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={400}
        unmountOnExit={true}
      >
        <div
          className="modal"
        >
          <article
            className="modal__popup"
            style={
              Object {
                "height": "31.25rem",
                "width": "47rem",
              }
            }
          >
            <Child>
              <div>
                Yolo
              </div>
            </Child>
          </article>
        </div>
      </Transition>
    </ModalContent>
  </Portal>
</Modal>
`;

exports[`Modal component Should render modal without template: Modal without template 1`] = `
<ModalContent
  modalVisibility={true}
  toggleVisibilityModal={[MockFunction]}
  withModalTemplate={false}
>
  <Transition
    appear={false}
    enter={true}
    exit={true}
    in={true}
    mountOnEnter={true}
    nodeRef={
      Object {
        "current": null,
      }
    }
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    timeout={400}
    unmountOnExit={true}
  >
    <div
      className="modal modal--blur"
    >
      <Child>
        <div>
          Yolo
        </div>
      </Child>
    </div>
  </Transition>
</ModalContent>
`;
